{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 275,
  "lineage": "3d680a91-d3b1-4828-c0fa-b0357b9ad66e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "armageddon_nat_eip01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-079e81ff6da7ae03a",
            "arn": "arn:aws:ec2:us-east-1:630633961968:elastic-ip/eipalloc-079e81ff6da7ae03a",
            "association_id": "eipassoc-0c32f86506da5f599",
            "domain": "vpc",
            "id": "eipalloc-079e81ff6da7ae03a",
            "network_border_group": "us-east-1",
            "network_interface": "eni-02470678a34d38211",
            "private_dns": "ip-10-20-1-10.ec2.internal",
            "private_ip": "10.20.1.10",
            "public_dns": "ec2-23-23-105-87.compute-1.amazonaws.com",
            "public_ip": "23.23.105.87",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "armageddon-nat-eip01"
            },
            "tags_all": {
              "Name": "armageddon-nat-eip01"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "armageddon_ec201",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0532be01f26a3de55",
            "arn": "arn:aws:ec2:us-east-1:630633961968:instance/i-0e28d29bdfe3b45e8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "armageddon-instance-profile01",
            "id": "i-0e28d29bdfe3b45e8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-09999030e786e4563"
              }
            ],
            "primary_network_interface_id": "eni-09999030e786e4563",
            "private_dns": "ip-10-20-1-31.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.1.31",
            "public_dns": "ec2-13-220-116-127.compute-1.amazonaws.com",
            "public_ip": "13.220.116.127",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09178e02da00b7721",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c06ff37411820771",
            "tags": {
              "Name": "armageddon-ec201"
            },
            "tags_all": {
              "Name": "armageddon-ec201"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-014111c4f3f70e7b3"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "630633961968",
            "id": "i-0e28d29bdfe3b45e8",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.armageddon_instance_profile01",
            "aws_iam_role.armageddon_ec2_role01",
            "aws_security_group.lab-ec2-app",
            "aws_subnet.armageddon_public_subnets",
            "aws_vpc.armageddon_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "armageddon_ec201_private_bonus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0532be01f26a3de55",
            "arn": "arn:aws:ec2:us-east-1:630633961968:instance/i-037a96db531114288",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "armageddon-instance-profile01",
            "id": "i-037a96db531114288",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-00dc1d8a679018a44"
              }
            ],
            "primary_network_interface_id": "eni-00dc1d8a679018a44",
            "private_dns": "ip-10-20-11-5.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.11.5",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a987253a653ce10b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e9527a0d2c032629",
            "tags": {
              "Name": "armageddon-ec201-private"
            },
            "tags_all": {
              "Name": "armageddon-ec201-private"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-014111c4f3f70e7b3"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "630633961968",
            "id": "i-037a96db531114288",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.armageddon_instance_profile01",
            "aws_iam_role.armageddon_ec2_role01",
            "aws_security_group.lab-ec2-app",
            "aws_subnet.armageddon_private_subnets",
            "aws_vpc.armageddon_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "armageddon_igw01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:630633961968:internet-gateway/igw-080dcdb8bb3507e37",
            "id": "igw-080dcdb8bb3507e37",
            "owner_id": "630633961968",
            "region": "us-east-1",
            "tags": {
              "Name": "armageddon-igw01"
            },
            "tags_all": {
              "Name": "armageddon-igw01"
            },
            "vpc_id": "vpc-0368e66570c0d3442"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.armageddon_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "armageddon_nat01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-079e81ff6da7ae03a",
            "association_id": "eipassoc-0c32f86506da5f599",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-091b7e511bead8518",
            "network_interface_id": "eni-02470678a34d38211",
            "private_ip": "10.20.1.10",
            "public_ip": "23.23.105.87",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c06ff37411820771",
            "tags": {
              "Name": "armageddon-nat01"
            },
            "tags_all": {
              "Name": "armageddon-nat01"
            },
            "vpc_id": "vpc-0368e66570c0d3442"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.armageddon_nat_eip01",
            "aws_internet_gateway.armageddon_igw01",
            "aws_subnet.armageddon_public_subnets",
            "aws_vpc.armageddon_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "armageddon_private_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e7c53101bc7d9fc51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-091b7e511bead8518",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0e7c53101bc7d9fc5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "630633961968",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0e7c53101bc7d9fc5"
          },
          "dependencies": [
            "aws_eip.armageddon_nat_eip01",
            "aws_internet_gateway.armageddon_igw01",
            "aws_nat_gateway.armageddon_nat01",
            "aws_route_table.armageddon_private_rt01",
            "aws_subnet.armageddon_public_subnets",
            "aws_vpc.armageddon_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "armageddon_public_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-080dcdb8bb3507e37",
            "id": "r-rtb-08a1a1e401e9b34ac1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-08a1a1e401e9b34ac",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "630633961968",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-08a1a1e401e9b34ac"
          },
          "dependencies": [
            "aws_internet_gateway.armageddon_igw01",
            "aws_route_table.armageddon_public_rt01",
            "aws_vpc.armageddon_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "armageddon_private_rt01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:630633961968:route-table/rtb-0e7c53101bc7d9fc5",
            "id": "rtb-0e7c53101bc7d9fc5",
            "owner_id": "630633961968",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-091b7e511bead8518",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "armageddon-private-rt01"
            },
            "tags_all": {
              "Name": "armageddon-private-rt01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0368e66570c0d3442"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "630633961968",
            "id": "rtb-0e7c53101bc7d9fc5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.armageddon_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "armageddon_public_rt01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:630633961968:route-table/rtb-08a1a1e401e9b34ac",
            "id": "rtb-08a1a1e401e9b34ac",
            "owner_id": "630633961968",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-080dcdb8bb3507e37",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "armageddon-public-rt01"
            },
            "tags_all": {
              "Name": "armageddon-public-rt01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0368e66570c0d3442"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "630633961968",
            "id": "rtb-08a1a1e401e9b34ac",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.armageddon_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "armageddon_private_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-040aabb17cfc11b30",
            "region": "us-east-1",
            "route_table_id": "rtb-0e7c53101bc7d9fc5",
            "subnet_id": "subnet-0e9527a0d2c032629"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.armageddon_private_rt01",
            "aws_subnet.armageddon_private_subnets",
            "aws_vpc.armageddon_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07faa5ffdab75a147",
            "region": "us-east-1",
            "route_table_id": "rtb-0e7c53101bc7d9fc5",
            "subnet_id": "subnet-0fe9d9e6a63038c49"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.armageddon_private_rt01",
            "aws_subnet.armageddon_private_subnets",
            "aws_vpc.armageddon_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "armageddon_public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b6fee983d2b193b",
            "region": "us-east-1",
            "route_table_id": "rtb-08a1a1e401e9b34ac",
            "subnet_id": "subnet-0c06ff37411820771"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.armageddon_public_rt01",
            "aws_subnet.armageddon_public_subnets",
            "aws_vpc.armageddon_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04224d80bd91a44d1",
            "region": "us-east-1",
            "route_table_id": "rtb-08a1a1e401e9b34ac",
            "subnet_id": "subnet-01de7e02295885365"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.armageddon_public_rt01",
            "aws_subnet.armageddon_public_subnets",
            "aws_vpc.armageddon_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "armageddon_rds_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:630633961968:security-group/sg-0590845c5dcc4026f",
            "description": "RDS security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0590845c5dcc4026f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-014111c4f3f70e7b3"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "armageddon-rds-sg01",
            "name_prefix": "",
            "owner_id": "630633961968",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "armageddon-rds-sg01"
            },
            "tags_all": {
              "Name": "armageddon-rds-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0368e66570c0d3442"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "630633961968",
            "id": "sg-0590845c5dcc4026f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.armageddon_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "armageddon_vpce_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:630633961968:security-group/sg-0d8d3700bf6a3f1bb",
            "description": "SG for VPC Interface Endpoints",
            "egress": [],
            "id": "sg-0d8d3700bf6a3f1bb",
            "ingress": [],
            "name": "armageddon-vpce-sg01",
            "name_prefix": "",
            "owner_id": "630633961968",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "armageddon-vpce-sg01"
            },
            "tags_all": {
              "Name": "armageddon-vpce-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0368e66570c0d3442"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "630633961968",
            "id": "sg-0d8d3700bf6a3f1bb",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.armageddon_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lab-ec2-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:630633961968:security-group/sg-014111c4f3f70e7b3",
            "description": "EC2 app security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-014111c4f3f70e7b3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "71.58.15.16/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "lab-ec2-app-sg",
            "name_prefix": "",
            "owner_id": "630633961968",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lab-ec2-app-sg"
            },
            "tags_all": {
              "Name": "lab-ec2-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0368e66570c0d3442"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "630633961968",
            "id": "sg-014111c4f3f70e7b3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.armageddon_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "armageddon_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:630633961968:subnet/subnet-0e9527a0d2c032629",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.20.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e9527a0d2c032629",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "630633961968",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "armageddon-private-subnet01"
            },
            "tags_all": {
              "Name": "armageddon-private-subnet01"
            },
            "vpc_id": "vpc-0368e66570c0d3442"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "630633961968",
            "id": "subnet-0e9527a0d2c032629",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.armageddon_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:630633961968:subnet/subnet-0fe9d9e6a63038c49",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.20.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fe9d9e6a63038c49",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "630633961968",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "armageddon-private-subnet02"
            },
            "tags_all": {
              "Name": "armageddon-private-subnet02"
            },
            "vpc_id": "vpc-0368e66570c0d3442"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "630633961968",
            "id": "subnet-0fe9d9e6a63038c49",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.armageddon_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "armageddon_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:630633961968:subnet/subnet-0c06ff37411820771",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c06ff37411820771",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "630633961968",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "armageddon-public-subnet01"
            },
            "tags_all": {
              "Name": "armageddon-public-subnet01"
            },
            "vpc_id": "vpc-0368e66570c0d3442"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "630633961968",
            "id": "subnet-0c06ff37411820771",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.armageddon_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:630633961968:subnet/subnet-01de7e02295885365",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.20.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01de7e02295885365",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "630633961968",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "armageddon-public-subnet02"
            },
            "tags_all": {
              "Name": "armageddon-public-subnet02"
            },
            "vpc_id": "vpc-0368e66570c0d3442"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "630633961968",
            "id": "subnet-01de7e02295885365",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.armageddon_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "armageddon_vpc01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:630633961968:vpc/vpc-0368e66570c0d3442",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-0b53653d618c6c71d",
            "default_route_table_id": "rtb-09f7f3a8fb8941450",
            "default_security_group_id": "sg-012e212c6154c22cb",
            "dhcp_options_id": "dopt-01915a9faad468662",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0368e66570c0d3442",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09f7f3a8fb8941450",
            "owner_id": "630633961968",
            "region": "us-east-1",
            "tags": {
              "Name": "armageddon-vpc01"
            },
            "tags_all": {
              "Name": "armageddon-vpc01"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "630633961968",
            "id": "vpc-0368e66570c0d3442",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "armageddon_vpce_ec2messages01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:630633961968:vpc-endpoint/vpce-0e72b9f481b6e68a1",
            "dns_entry": [
              {
                "dns_name": "vpce-0e72b9f481b6e68a1-fiokmnsc.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0e72b9f481b6e68a1-fiokmnsc-us-east-1b.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0e72b9f481b6e68a1-fiokmnsc-us-east-1a.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ec2messages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z063811438XE959LOXQED"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0e72b9f481b6e68a1",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-00e7cdc3b41f0e6a4",
              "eni-0c7618db870a48012"
            ],
            "owner_id": "630633961968",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0d8d3700bf6a3f1bb"
            ],
            "service_name": "com.amazonaws.us-east-1.ec2messages",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.20.11.56",
                "subnet_id": "subnet-0e9527a0d2c032629"
              },
              {
                "ipv4": "10.20.12.107",
                "subnet_id": "subnet-0fe9d9e6a63038c49"
              }
            ],
            "subnet_ids": [
              "subnet-0e9527a0d2c032629",
              "subnet-0fe9d9e6a63038c49"
            ],
            "tags": {
              "Name": "armageddon-vpce-ec2messages01"
            },
            "tags_all": {
              "Name": "armageddon-vpce-ec2messages01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0368e66570c0d3442"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "630633961968",
            "id": "vpce-0e72b9f481b6e68a1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.armageddon_vpce_sg01",
            "aws_subnet.armageddon_private_subnets",
            "aws_vpc.armageddon_vpc01",
            "data.aws_region.armageddon_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "armageddon_vpce_kms01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:630633961968:vpc-endpoint/vpce-0cdbde14acf35c03c",
            "dns_entry": [
              {
                "dns_name": "vpce-0cdbde14acf35c03c-cm88qzic.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0cdbde14acf35c03c-cm88qzic-us-east-1a.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0cdbde14acf35c03c-cm88qzic-us-east-1b.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "kms.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z030773822EJX8D4CQAIC"
              },
              {
                "dns_name": "kms.us-east-1.api.aws",
                "hosted_zone_id": "Z02969283VA81PPEDYC37"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0cdbde14acf35c03c",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-08419fd0e69f1aa7c",
              "eni-09040b2f71be0ab20"
            ],
            "owner_id": "630633961968",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0d8d3700bf6a3f1bb"
            ],
            "service_name": "com.amazonaws.us-east-1.kms",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.20.11.62",
                "subnet_id": "subnet-0e9527a0d2c032629"
              },
              {
                "ipv4": "10.20.12.201",
                "subnet_id": "subnet-0fe9d9e6a63038c49"
              }
            ],
            "subnet_ids": [
              "subnet-0e9527a0d2c032629",
              "subnet-0fe9d9e6a63038c49"
            ],
            "tags": {
              "Name": "armageddon-vpce-kms01"
            },
            "tags_all": {
              "Name": "armageddon-vpce-kms01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0368e66570c0d3442"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "630633961968",
            "id": "vpce-0cdbde14acf35c03c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.armageddon_vpce_sg01",
            "aws_subnet.armageddon_private_subnets",
            "aws_vpc.armageddon_vpc01",
            "data.aws_region.armageddon_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "armageddon_vpce_logs01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:630633961968:vpc-endpoint/vpce-07af6e792b80baea1",
            "dns_entry": [
              {
                "dns_name": "vpce-07af6e792b80baea1-7v360xfn.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-07af6e792b80baea1-7v360xfn-us-east-1b.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-07af6e792b80baea1-7v360xfn-us-east-1a.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z01186061AQI28ZM99EF6"
              },
              {
                "dns_name": "streaming-logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0117673LS8GHF43GS9M"
              },
              {
                "dns_name": "streaming-logs.us-east-1.api.aws",
                "hosted_zone_id": "Z030787822NTYFB9BEXLR"
              },
              {
                "dns_name": "logs.us-east-1.api.aws",
                "hosted_zone_id": "Z01171222PV8KMJ62PA1L"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-07af6e792b80baea1",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0744fdc2a7298d306",
              "eni-0b01c0db78fbbd724"
            ],
            "owner_id": "630633961968",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0d8d3700bf6a3f1bb"
            ],
            "service_name": "com.amazonaws.us-east-1.logs",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.20.11.104",
                "subnet_id": "subnet-0e9527a0d2c032629"
              },
              {
                "ipv4": "10.20.12.251",
                "subnet_id": "subnet-0fe9d9e6a63038c49"
              }
            ],
            "subnet_ids": [
              "subnet-0e9527a0d2c032629",
              "subnet-0fe9d9e6a63038c49"
            ],
            "tags": {
              "Name": "armageddon-vpce-logs01"
            },
            "tags_all": {
              "Name": "armageddon-vpce-logs01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0368e66570c0d3442"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "630633961968",
            "id": "vpce-07af6e792b80baea1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.armageddon_vpce_sg01",
            "aws_subnet.armageddon_private_subnets",
            "aws_vpc.armageddon_vpc01",
            "data.aws_region.armageddon_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "armageddon_vpce_s3_gw01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:630633961968:vpc-endpoint/vpce-0a76a1ad2c611c55d",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0a76a1ad2c611c55d",
            "ip_address_type": "ipv4",
            "owner_id": "630633961968",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "region": "us-east-1",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0e7c53101bc7d9fc5"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Name": "armageddon-vpce-s3-gw01"
            },
            "tags_all": {
              "Name": "armageddon-vpce-s3-gw01"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0368e66570c0d3442"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "630633961968",
            "id": "vpce-0a76a1ad2c611c55d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.armageddon_private_rt01",
            "aws_vpc.armageddon_vpc01",
            "data.aws_region.armageddon_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "armageddon_vpce_secrets01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:630633961968:vpc-endpoint/vpce-075e24f5f1b075e7c",
            "dns_entry": [
              {
                "dns_name": "vpce-075e24f5f1b075e7c-uesdzpxr.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-075e24f5f1b075e7c-uesdzpxr-us-east-1b.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-075e24f5f1b075e7c-uesdzpxr-us-east-1a.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "secretsmanager.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z011694417GUS5EC27AU8"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-075e24f5f1b075e7c",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-03175e1ce7887aca7",
              "eni-0b7d1c2c5be13b3a4"
            ],
            "owner_id": "630633961968",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0d8d3700bf6a3f1bb"
            ],
            "service_name": "com.amazonaws.us-east-1.secretsmanager",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.20.11.82",
                "subnet_id": "subnet-0e9527a0d2c032629"
              },
              {
                "ipv4": "10.20.12.151",
                "subnet_id": "subnet-0fe9d9e6a63038c49"
              }
            ],
            "subnet_ids": [
              "subnet-0e9527a0d2c032629",
              "subnet-0fe9d9e6a63038c49"
            ],
            "tags": {
              "Name": "armageddon-vpce-secrets01"
            },
            "tags_all": {
              "Name": "armageddon-vpce-secrets01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0368e66570c0d3442"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "630633961968",
            "id": "vpce-075e24f5f1b075e7c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.armageddon_vpce_sg01",
            "aws_subnet.armageddon_private_subnets",
            "aws_vpc.armageddon_vpc01",
            "data.aws_region.armageddon_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "armageddon_vpce_ssm01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:630633961968:vpc-endpoint/vpce-0e5cf5416fcdd874d",
            "dns_entry": [
              {
                "dns_name": "vpce-0e5cf5416fcdd874d-hrwn4q6h.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0e5cf5416fcdd874d-hrwn4q6h-us-east-1b.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0e5cf5416fcdd874d-hrwn4q6h-us-east-1a.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssm.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z01182232MC31X2V1CEUG"
              },
              {
                "dns_name": "ssm.us-east-1.api.aws",
                "hosted_zone_id": "Z0638143TIZ7Z04QPAC0"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0e5cf5416fcdd874d",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-01dfd8b6914f13cbc",
              "eni-0636ec7e0bc2bd792"
            ],
            "owner_id": "630633961968",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0d8d3700bf6a3f1bb"
            ],
            "service_name": "com.amazonaws.us-east-1.ssm",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.20.11.17",
                "subnet_id": "subnet-0e9527a0d2c032629"
              },
              {
                "ipv4": "10.20.12.220",
                "subnet_id": "subnet-0fe9d9e6a63038c49"
              }
            ],
            "subnet_ids": [
              "subnet-0e9527a0d2c032629",
              "subnet-0fe9d9e6a63038c49"
            ],
            "tags": {
              "Name": "armageddon-vpce-ssm01"
            },
            "tags_all": {
              "Name": "armageddon-vpce-ssm01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0368e66570c0d3442"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "630633961968",
            "id": "vpce-0e5cf5416fcdd874d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.armageddon_vpce_sg01",
            "aws_subnet.armageddon_private_subnets",
            "aws_vpc.armageddon_vpc01",
            "data.aws_region.armageddon_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "armageddon_vpce_ssmmessages01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:630633961968:vpc-endpoint/vpce-0bdb657dd303cecf3",
            "dns_entry": [
              {
                "dns_name": "vpce-0bdb657dd303cecf3-lx79oebc.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0bdb657dd303cecf3-lx79oebc-us-east-1b.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0bdb657dd303cecf3-lx79oebc-us-east-1a.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssmmessages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0297357253V7KRFGVM9H"
              },
              {
                "dns_name": "ssmmessages.us-east-1.api.aws",
                "hosted_zone_id": "Z02981302RGIOHOKE2T9D"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0bdb657dd303cecf3",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0891c292875e42082",
              "eni-0dc860e504eba31d8"
            ],
            "owner_id": "630633961968",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0d8d3700bf6a3f1bb"
            ],
            "service_name": "com.amazonaws.us-east-1.ssmmessages",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.20.11.218",
                "subnet_id": "subnet-0e9527a0d2c032629"
              },
              {
                "ipv4": "10.20.12.146",
                "subnet_id": "subnet-0fe9d9e6a63038c49"
              }
            ],
            "subnet_ids": [
              "subnet-0e9527a0d2c032629",
              "subnet-0fe9d9e6a63038c49"
            ],
            "tags": {
              "Name": "armageddon-vpce-ssmmessages01"
            },
            "tags_all": {
              "Name": "armageddon-vpce-ssmmessages01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0368e66570c0d3442"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "630633961968",
            "id": "vpce-0bdb657dd303cecf3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.armageddon_vpce_sg01",
            "aws_subnet.armageddon_private_subnets",
            "aws_vpc.armageddon_vpc01",
            "data.aws_region.armageddon_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_outbound_ipv4_ec2_public_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:630633961968:security-group-rule/sgr-01a0f61dfd479144b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-01a0f61dfd479144b",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-014111c4f3f70e7b3",
            "security_group_rule_id": "sgr-01a0f61dfd479144b",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "630633961968",
            "id": "sgr-01a0f61dfd479144b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.lab-ec2-app",
            "aws_vpc.armageddon_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_outbound_ipv4_private_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:630633961968:security-group-rule/sgr-063ac4ae8c3a11b27",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-063ac4ae8c3a11b27",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0590845c5dcc4026f",
            "security_group_rule_id": "sgr-063ac4ae8c3a11b27",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "630633961968",
            "id": "sgr-063ac4ae8c3a11b27",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.armageddon_rds_sg01",
            "aws_vpc.armageddon_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_all_inbound_http_ipv4_ec2_public_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:630633961968:security-group-rule/sgr-0dca8338f21866c19",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0dca8338f21866c19",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-014111c4f3f70e7b3",
            "security_group_rule_id": "sgr-0dca8338f21866c19",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "630633961968",
            "id": "sgr-0dca8338f21866c19",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.lab-ec2-app",
            "aws_vpc.armageddon_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_inbound_http_from_ec2_public_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:630633961968:security-group-rule/sgr-0e22588cbe9c0b64d",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-0e22588cbe9c0b64d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-014111c4f3f70e7b3",
            "region": "us-east-1",
            "security_group_id": "sg-0590845c5dcc4026f",
            "security_group_rule_id": "sgr-0e22588cbe9c0b64d",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "630633961968",
            "id": "sgr-0e22588cbe9c0b64d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.armageddon_rds_sg01",
            "aws_security_group.lab-ec2-app",
            "aws_vpc.armageddon_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_trusted_inbound_ssh_ipv4_ec2_public_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:630633961968:security-group-rule/sgr-09b6731cdcc88c66b",
            "cidr_ipv4": "71.58.15.16/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-09b6731cdcc88c66b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-014111c4f3f70e7b3",
            "security_group_rule_id": "sgr-09b6731cdcc88c66b",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "630633961968",
            "id": "sgr-09b6731cdcc88c66b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.lab-ec2-app",
            "aws_vpc.armageddon_vpc01"
          ]
        }
      ]
    }
  ]
}